--- a/ansible/roles/script_exec/tasks/main.yml
+++ b/ansible/roles/script_exec/tasks/main.yml
@@ -1,9 +1,9 @@
 - name: Run init
   command: /vagrant/scripts/init.sh
   become: true
-- name: Run dist
-  command: /vagrant/scripts/dist.sh
-  become: true
-- name: Run dist
+# - name: Run dist
+#   command: /vagrant/scripts/dist.sh
+#   become: true
+- name: Run boot
   command: /vagrant/scripts/boot.sh
   become: true
