--- a/ansible/roles/script_exec/tasks/main.yml
+++ b/ansible/roles/script_exec/tasks/main.yml
@@ -1,6 +1,6 @@
-- name: Run init
-  command: /vagrant/scripts/init.sh
-  become: true
+# - name: Run init
+#   command: /vagrant/scripts/init.sh
+#   become: true
 - name: Run boot
   command: /vagrant/scripts/boot.sh
   become: true
