--- a/ansible/irix_ansible_setup.yml
+++ b/ansible/irix_ansible_setup.yml
@@ -1,9 +1,9 @@
 ---
-- name: generate scripts for virt
-  hosts: all
-  tasks:
-  - import_role:
-     name: script_setup
+# - name: generate scripts for virt
+#   hosts: all
+#   tasks:
+#   - import_role:
+#      name: script_setup
 - name: generate irix_ansible inventory file from Vagrant parameters
   hosts: all
   tasks:
