--- a/ansible/irix_ansible_setup.yml
+++ b/ansible/irix_ansible_setup.yml
@@ -1,20 +1,10 @@
 ---
-# - name: generate scripts for virt
-#   hosts: all
-#   tasks:
-#   - import_role:
-#      name: script_setup
-- name: generate irix_ansible inventory file from Vagrant parameters
+ - name: generate irix_ansible inventory file from Vagrant parameters
   hosts: all
   tasks:
   - import_role:
      name: inventory_gen
-# - name: run virt scripts
-#   hosts: all
-#   tasks:
-#   - import_role:
-#      name: script_exec
-- name: run fetch_files play
+- name: run fetch_files role
   hosts: all
   tasks:
   - import_role:
