--- a/ansible/roles/fetch_files/tasks/main.yml
+++ b/ansible/roles/fetch_files/tasks/main.yml
@@ -184,66 +184,66 @@
     owner: vagrant
     group: vagrant
 
-# #-------- Manage Media
-# - name: Fetch foundation
-#   get_url:
-#     url: "{{ item }}"
-#     dest: /vagrant/irix
-#   with_items:
-#     - "{{ foundation.splitlines() }}"
-# - name: Fetch overlay
-#   get_url:
-#     url: "{{ item }}"
-#     dest: /vagrant/irix
-#   with_items:
-#     - "{{ overlay.splitlines() }}"
-# - name: Fetch devel
-#   get_url:
-#     url: "{{ item }}"
-#     dest: /vagrant/irix
-#   with_items:
-#     - "{{ devel.splitlines() }}"
-# - name: Fetch extras
-#   get_url:
-#     url: "{{ item }}"
-#     dest: /vagrant/irix
-#   with_items:
-#     - "{{ extras.splitlines() }}"
-# - name: Fetch bootstrap
-#   get_url:
-#     url: "{{ item }}"
-#     dest: /vagrant/irix
-#   with_items:
-#     - "{{ bootstrap.splitlines() }}"
+#-------- Manage Media
+- name: Fetch foundation
+  get_url:
+    url: "{{ item }}"
+    dest: /vagrant/irix
+  with_items:
+    - "{{ foundation.splitlines() }}"
+- name: Fetch overlay
+  get_url:
+    url: "{{ item }}"
+    dest: /vagrant/irix
+  with_items:
+    - "{{ overlay.splitlines() }}"
+- name: Fetch devel
+  get_url:
+    url: "{{ item }}"
+    dest: /vagrant/irix
+  with_items:
+    - "{{ devel.splitlines() }}"
+- name: Fetch extras
+  get_url:
+    url: "{{ item }}"
+    dest: /vagrant/irix
+  with_items:
+    - "{{ extras.splitlines() }}"
+- name: Fetch bootstrap
+  get_url:
+    url: "{{ item }}"
+    dest: /vagrant/irix
+  with_items:
+    - "{{ bootstrap.splitlines() }}"
 
-# - name: Listing tarballs
-#   shell: ls /vagrant/irix/*.tar.gz
-#   register: tarballs
-#   changed_when: false
+- name: Listing tarballs
+  shell: ls /vagrant/irix/*.tar.gz
+  register: tarballs
+  changed_when: false
 
-# - name: Listing tarballs
-#   shell: ls /vagrant/irix/*.tar
-#   register: tars
-#   changed_when: false
+- name: Listing tarballs
+  shell: ls /vagrant/irix/*.tar
+  register: tars
+  changed_when: false
 
-# - name: Listing bundles
-#   shell: ls /vagrant/irix/*.tardist.gz
-#   register: bundles
-#   changed_when: false
+- name: Listing bundles
+  shell: ls /vagrant/irix/*.tardist.gz
+  register: bundles
+  changed_when: false
 
-# - name: Extracting tarballs
-#   unarchive:
-#     src: "{{ item }}"
-#     dest: /vagrant/irix/
-#     copy: no
-#   with_items: '{{ tarballs.stdout_lines }}'
+- name: Extracting tarballs
+  unarchive:
+    src: "{{ item }}"
+    dest: /vagrant/irix/
+    copy: no
+  with_items: '{{ tarballs.stdout_lines }}'
 
-# - name: Extracting tars
-#   unarchive:
-#     src: "{{ item }}"
-#     dest: /vagrant/irix/
-#     copy: no
-#   with_items: '{{ tars.stdout_lines }}'
+- name: Extracting tars
+  unarchive:
+    src: "{{ item }}"
+    dest: /vagrant/irix/
+    copy: no
+  with_items: '{{ tars.stdout_lines }}'
 
 - name: Extracting bundles
   shell: gunzip "{{ item }}"
