--- a/ansible/roles/fetch_files/tasks/main.yml
+++ b/ansible/roles/fetch_files/tasks/main.yml
@@ -12,5 +12,7 @@
 - import_tasks: setup_media.yml
 #-------- rsync media to /irix
 - import_tasks: rsync_to_irix.yml
+#--------- Generate selections
+- import_tasks: generate_selections.yml
 #--------- Display  useful info
 - import_tasks: display_results.yml
